--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head></head>
     <body>
-        <u>this is a try</u>
+        <u>blablabla this is a try</u>
         <b>en gras</b>
     </body>
 </html>
