enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <u>blablabla this is a try</u>
-        <b>en gras</b>
+        <b>en gras really ?</b>
     </body>
 </html>
